<resources>
    <string name="app_name">수원스마트앱개발</string>

    <string name="hello_world">안녕 안드로이드 전송!</string>
    <string name="name">테스트</string>
    <string name="action_settings">셋팅(Settings)</string>
    <!-- 주석 테스트 -->
    <!--테스트-->
    <!-- 주석 단축키는 Ctrl + / -->
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_label_second">두번째 창</string>
    <string name="button1">버튼1</string>
    <string name="button2">버튼2</string>
    <string name="button3">버튼3</string>
    <string name="button4">버튼4</string>
    <string name="button5">버튼5</string>

    <string name="text1">텍스트1</string>
    <string name="text2">텍스트2</string>
    <string name="text3">텍스트3</string>
    <string name="text4">텍스트4</string>
    <string name="text5">텍스트5</string>
    <string name="text6">텍스트6</string>


    <string name="title_activity_relative_layout_exam">RelativeLayoutExamActivity</string>
    <string name="title_activity_table_layout">TableLayoutActivity</string>
    <string name="title1">국어</string>
    <string name="title2">영어</string>
    <string name="title3">수학</string>

    <string name="lineDp">2dp</string>
    <color name="titleBackColor">#FAF4C0</color>
    <color name="defaultColor">#FFFFFF</color>
    <string name="title_activity_frame_layout">FrameLayoutActivity</string>
    <string name="title_activity_edit_text">EditTextActivity</string>
    <string name="title_activity_test_exam">testExamActivity</string>
    <string name="title_activity_activity_exam">ActivityExamActivity</string>
    <string name="title_activity_target">TargetActivity</string>
    <string name="title_activity_touch_event">TouchEventActivity</string>
    <string name="title_activity_do_it_mission05">doItMission05Activity</string>
    <string name="title_activity_challenge05">challenge05</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_challente05">challente05</string>
    <string name="title_activity_challenge06">challenge06Activity</string>


    <string name="test_value">Git 테스트를 위한 수정</string>
    <string name="title_activity_live_view">liveViewActivity</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="title_activity_spinner_exam">SpinnerExamActivity</string>
    <string name="title_activity_grid_activity2">GridActivity2Activity</string>
    <string name="title_activity_datebook">Datebook</string>
    <string name="title_activity_carlendar">CarlendarActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_parsing">ParsingActivity</string>
    <string name="title_activity_parsing_exam">ParsingExamActivity</string>
    <string name="title_activity_recipe_adapter">RecipeAdapter</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_xml_parsing">XmlParsing</string>
    <string name="title_activity_test_sample">TestSampleActivity</string>
    <string name="title_activity_android_pub_adapter">AndroidPubAdapter</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_tour_list_main">TourListMainActivity</string>
    <string name="title_activity_bit_map">BitMapActivity</string>
    <string name="title_activity_custom_view_image">CustomViewImage</string>
    <string name="title_activity_bitmap_main">BitmapMainActivity</string>
    <string name="title_activity_graphic">GraphicActivity</string>
    <string name="title_activity_image_gallery2">ImageGallery2Activity</string>

    <string name="pick_from_camera">From camera</string>
    <string name="pick_from_album">From album</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_async_task">AsyncTaskActivity</string>
    <string name="title_activity_thread">ThreadActivity</string>
    <string name="title_activity_timer">TimerActivity</string>

    <string name="timerVal">00:00:000</string>
    <string name="pauseButtonLabel">Pause</string>
    <string name="startButtonLabel">Start</string>
    <string name="title_activity_kitchen_timer">KitchenTimerActivity</string>
    <string name="title_activity_image_exam">ImageExamActivity</string>
    <string name="title_activity_sms">SMSActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_db">DbActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_action_pick">ActionPickActivity</string>
    <string name="title_activity_db_manager">DbManager</string>
    <string name="title_activity_chat">ChatActivit</string>
    <string name="title_activity_sub_test_sample">SubTestSampleActivity</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="title_activity_camera_intent">CameraIntentActivity</string>
    <string name="title_activity_camera_builtin">CameraBuiltinActivity</string>
    <string name="title_activity_media_player">MediaPlayerActivity</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="title_activity_music_player">MusicPlayerActivity</string>
    <string name="title_activity_video_player">VideoPlayerActivity</string>
    <string name="title_activity_music_video_player">MusicVideoPlayerActivity</string>
    <string name="title_activity_file_list">FileList</string>
    <string name="title_activity_media_file_list">MediaFileListActivity</string>
    <string name="title_activity_file_manager">FileManagerActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
</resources>