<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:stretchColumns="0,1,2,3"

    tools:context="com.example.smson.hello.activity.TableLayoutActivity">
    <!--android:layout_columnSpan=""-->

    <TableRow
        android:background="#000000">
        <TextView
            android:text=""
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:padding="10dp"
            android:background="#ffffff"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/title1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:padding="10dp"
            android:background="#FAF4C0"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/title2"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:padding="10dp"
            android:background="#FAF4C0"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/title3"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:padding="10dp"
            android:background="#FAF4C0"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:background="#000000">
        <TextView
            android:text="이름1"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:padding="10dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="100"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:padding="10dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="100"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:padding="10dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="100"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:padding="10dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:background="#000000">
        <TextView
            android:text="이름2"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:padding="10dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="100"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:padding="10dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="100"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:padding="10dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="100"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:padding="10dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TextView
        android:layout_height="2dp"
        android:background="#000000"
        />
</TableLayout>
